# game_making_template

./: CMakeLists.txt  Camera.h  CommonValues.h  ErrorReportingGPU.h  Light.cpp  Light.h  Material.cpp  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  SDLWindow.cpp  SDLWindow.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
shaders/: shader.frag  shader.vert
src/: Camera.cpp  CommonValues.h  ErrorReportingGPU.cpp  Material.h  Model.cpp  Model.h  SDLWindow.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/Light/: DirectionalLight.h  Light.h  PointLight.cpp  SpotLight.cpp  SpotLight.h
theRotFolder/: InputHandler.cpp  InputHandler.h
